k8s/news/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news
  namespace: news
  labels:
    app: news
spec:
  type: ClusterIP
  selector:
    app: news
  ports:
    - name: http
      port: 80
      targetPort: 3002
